# hickory-dns

./: .appveyor.yml  .codecov.yml  .coveralls.yml  .dockerignore  .gitignore  .markdownlint.json  .rustfmt.toml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Kjqmt7v.csr  LICENSE-MIT  Makefile.toml  OLD-CHANGELOG.md  README.md  SECURITY.md  _config.yml  appveyor.yml  build.rs  cargo.toml  copyright.txt  docker-ftest.sh  index.html  index.md  justfile  params.json  root_key.sh  run_with_example.sh
client/: Cargo.toml  README.md  build.rs
client/benches/: lower_name_benches.rs
client/src/: dnskey_to_pem.rs  https_client_connection.rs  lib.rs  logger.rs  tests.rs
client/src/authority/: catalog.rs  persistence.rs
client/src/client/: client.rs  client_connection.rs  client_future.rs  client_future.rs.fmt  memoize_client_handle.rs  mod.rs  rc_future.rs  retry_client_handle.rs  secure_client_handle.rs
client/src/config/: mod.rs
client/src/error/: client_error.rs  decode_error.rs  dnssec_error.rs  encode_error.rs  lexer_error.rs  mod.rs  parse_error.rs  persistence_error.rs
client/src/multicast/: mdns_client_connection.rs  mod.rs
client/src/op/: edns.rs  header.rs  lower_query.rs  message.rs  mod.rs  op_code.rs  query.rs  request_handler.rs  response_code.rs  update_message.rs
client/src/rr/: dns_class.rs  domain.rs  lower_name.rs  mod.rs  record_data.rs  record_type.rs  resource.rs  rr_key.rs  rr_set.rs
client/src/tcp/: mod.rs  tcp_client_connection.rs  tcp_client_stream.rs  tcp_stream.rs
client/src/tls/: mod.rs  tests.rs  tls_client_connection.rs  tls_client_stream.rs  tls_stream.rs
client/src/tls_native/: mod.rs  tests.rs  tls_client_connection.rs  tls_client_stream.rs
client/src/tls_openssl/: tests.rs  tls_client_connection.rs  tls_client_stream.rs  tls_stream.rs
client/src/udp/: handler.rs  mod.rs  udp_client_connection.rs  udp_client_stream.rs  udp_stream.rs
client/tests/: client_future_tests.rs  client_tests.rs  secure_client_handle_tests.rs  tls_stream.rs  tls_stream_tests.rs  txt_tests.rs
client/tests/common/: mod.rs
compatibility-tests/: Cargo.toml
compatibility-tests/src/: bind.rs  lib.rs  none.rs
compatibility-tests/tests/: sig0_tests.rs
compatibility-tests/tests/conf/: Kupdate.example.com.+008+56935.key  bind-example.conf
conformance/: Cargo.toml  README.md
conformance/compatibility-tests/: Cargo.toml
conformance/compatibility-tests/src/: lib.rs  sig0_tests.rs  tsig_tests.rs  zone_transfer.rs
conformance/conformance-tests/: Cargo.toml
conformance/conformance-tests/src/: lib.rs  name_server.rs  resolver.rs
conformance/dns-test/: Cargo.toml
conformance/dns-test/src/: client.rs  container.rs  forwarder.rs  fqdn.rs  implementation.rs  lib.rs  name_server.rs  nsec3.rs  record.rs  resolver.rs  trust_anchor.rs  tshark.rs  tsig.rs
conformance/e2e-tests/: Cargo.toml  README.md
conformance/e2e-tests/src/: client.rs  forwarder.rs  lib.rs  recursor.rs  resolver.rs
conformance/ede-dot-com/: Cargo.toml
conformance/test-server/: Cargo.toml
conformance/test-server/src/: main.rs  (+2 more)
crates/async-std-resolver/: Cargo.toml  README.md
crates/client/: Cargo.toml  LICENSE-MIT  README.md
crates/dnstap/: Cargo.toml
crates/https/: Cargo.toml  README.md
crates/native-tls/: Cargo.toml  LICENSE-MIT  README.md
crates/net/: Cargo.toml  LICENSE-MIT  README.md
crates/openssl/: Cargo.toml  README.md
crates/proto/: Cargo.toml  README.md
crates/recursor/: Cargo.toml  LICENSE-MIT  README.md
crates/resolv-conf/: Cargo.toml  LICENSE-MIT  README.md
crates/resolver/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
crates/rustls/: Cargo.toml  README.md
crates/server/: Cargo.toml  README.md  build.rs
integration-tests/: Cargo.toml
integration-tests/src/: authority.rs  lib.rs  mock_client.rs  tls_client_connection.rs
integration-tests/tests/: authority_tests.rs  catalog_tests.rs  client_future_tests.rs  client_tests.rs  lookup_tests.rs  mdns_tests.rs  name_server_pool_tests.rs  secure_client_handle_tests.rs  server_future_tests.rs
native-tls/: Cargo.toml  README.md
native-tls/src/: lib.rs  tests.rs  tls_client_connection.rs  tls_client_stream.rs  tls_stream.rs
openssl/: Cargo.toml  README.md
openssl/src/: lib.rs  tests.rs  tls_client_connection.rs  tls_client_stream.rs  tls_server.rs  tls_stream.rs
openssl/tests/: openssl_tests.rs
proto/: Cargo.toml  README.md
proto/benches/: lib.rs  name_benches.rs
proto/src/: dns_handle.rs  error.rs  lib.rs  retry_dns_handle.rs  secure_dns_handle.rs
resolver/: CHANGELOG.md  Cargo.toml  README.md  build.rs
resolver/examples/: global_resolver.rs  multithreaded_runtime.rs
resolver/src/: config.rs  dns_lru.rs  dns_sd.rs  error.rs  hosts.rs  https.rs  lib.rs  lookup.rs  lookup_ip.rs  lookup_state.rs  lru.rs  name_server_pool.rs  pool.rs  resolv_conf.rs  resolver.rs  resolver_future.rs
resolver/tests/: hosts  resolv.conf-linux  resolv.conf-macos
rustls/: Cargo.toml  README.md
rustls/src/: lib.rs  tests.rs  tls_client_connection.rs  tls_client_stream.rs  tls_server.rs  tls_stream.rs
server/: Cargo.toml  README.md  build.rs  tamed_server.txt  taming_rusqlite.txt
server/benches/: comparison_benches.rs
server/ocap_taming/: README.md  chrono.txt  std.txt
server/src/: config.rs  lib.rs  logger.rs  named.rs
server/tests/: authority_tests.rs  catalog_tests.rs  client_future_tests.rs  client_tests.rs  config_tests.rs  persistence_tests.rs  secure_client_handle_tests.rs  server_future_tests.rs  server_tests.rs  timeout_stream_tests.rs  txt_tests.rs  z_named_https_tests.rs  z_named_native_tls_tests.rs  z_named_openssl_tests.rs  z_named_rustls_tests.rs  z_named_test_rsa_dnssec.rs  z_named_tests.rs
tests/compatibility-tests/: Cargo.toml
tests/e2e-tests/: Cargo.toml
tests/ede-dot-com/: Cargo.toml  README.md
util/: Cargo.toml  Makefile.toml  README.md
util/src/: bind_dnskey_to_pem.rs  dns.rs  dnskey_to_pem.rs  get_root_ksk.rs  get_root_ksks.rs  lib.rs  pem_to_public_dnskey.rs  recurse.rs  resolve.rs
(+2089 files in other folders)
