[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/resolver",
    "crates/recursor",
    "crates/client",
    "crates/server",
    "bin",
    "util",
    "tests/compatibility-tests",
    "tests/integration-tests",
    "tests/test-support",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.25.0"
authors = ["The contributors to Hickory DNS"]
edition = "2021"
rust-version = "1.71.1"
homepage = "https://hickory-dns.org/"
repository = "https://github.com/hickory-dns/hickory-dns"
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
# hickory
hickory-client = { version = "0.25", path = "crates/client", default-features = false }
hickory-recursor = { version = "0.25", path = "crates/recursor", default-features = false }
hickory-resolver = { version = "0.25", path = "crates/resolver", default-features = false }
hickory-server = { version = "0.25", path = "crates/server", default-features = false }
hickory-proto = { version = "0.25", path = "crates/proto", default-features = false }
test-support.path = "tests/test-support"


# logging
tracing = "0.1.30"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
thiserror = "2"


# async/await
async-recursion = "1.0.0"
async-trait = "0.1.43"
futures = { version = "0.3.5", default-features = false }
futures-channel = { version = "0.3.5", default-features = false }
futures-executor = { version = "0.3.5", default-features = false }
futures-io = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.5", default-features = false }
async-std = "1.6"
tokio = "1.21"
tokio-util = "0.7.9"
parking_lot = "0.12"
pin-project-lite = "0.2"


# cryptography
aws-lc-rs = { version = "1.12.3", default-features = false, features = ["prebuilt-nasm"] }
rustls = { version = "0.23.23", default-features = false, features = ["logging", "std", "tls12"] }
rustls-platform-verifier = "0.5"
rustls-pki-types = "1.10"
tokio-rustls = { version = "0.26", default-features = false }
webpki-roots = "0.26"
ring = "0.17"


# net proto
quinn = { version = "0.11.2", default-features = false }
h2 = "0.4.0"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.1"


# others
backtrace = "0.3.50"
bitflags = "2.4.1"
bytes = "1"
cfg-if = "1"
clap = { version = "4.0", default-features = false }
console = "0.15.0"
data-encoding = "2.2.0"
enum-as-inner = "0.6"
idna = "1.0"
ipconfig = "0.3.0"
ipnet = "2.3.0"
libc = "0.2"
js-sys = "0.3.44"
lru-cache = "0.1.2"
moka = "0.12"
once_cell = "1.20.0"
pin-utils = "0.1.0"
prefix-trie = "0.6"
radix_trie = "0.2.0"
rand = "0.9"
regex = "1.3.4"
resolv-conf = "0.7.0"
rusqlite = "0.33"
serde = "1.0"
smallvec = "1.6"
socket2 = "0.5"
time = "0.3"
tinyvec = "1.1.1"
toml = "0.8.14"
url = "2.4.0"
wasm-bindgen-crate = { version = "0.2.58", package = "wasm-bindgen" }

[patch.crates-io]
# tokio = { path = "../tokio/tokio" }
# mio = { git = "https://github.com/tokio-rs/mio.git" }
# h2 = { git = "https://github.com/hyperium/h2.git" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
