[package]
name = "trust-dns"
version = "0.8.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS server and client with DNSec support.
 Eventually this could be a replacement for BIND9. DNSSec on the client side,
 with NSEC validation for negative records, is complete. The client and
 server both support dynamic DNS with authenticated requests.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

# custom build steps
build = "build.rs"

[features]

[lib]
name = "trust_dns"
path = "src/lib.rs"

[dependencies]
backtrace = "^0.2.1"
chrono = "^0.2.21"
data-encoding = "^1.1.2"
docopt = "^0.6.78"
error-chain = "0.1.12"
futures = "^0.1"
lazy_static = "^0.2.1"
log = "^0.3.5"
mio = "^0.5.1"
openssl = "^0.8.3"
rand = "^0.3"
rustc-serialize = "^0.3.18"
rusqlite = "^0.7.3"
time = "^0.1"
tokio-core = "^0.1"
toml = "^0.1"
