[package]
name = "trust-dns-integration"
version = "0.1.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS integration testing library.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "../README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

[lib]
name = "trust_dns_integration"
path = "src/lib.rs"

[features]
dnssec-openssl = ["dnssec",
                  "trust-dns-resolver/dnssec-openssl",
                  "trust-dns-server/dnssec-openssl",
                  "trust-dns/dnssec-openssl",
                  "trust-dns-proto/dnssec-openssl"]
dnssec-ring = ["dnssec",
               "trust-dns-resolver/dnssec-ring",
               "trust-dns-server/dnssec-ring",
               "trust-dns/dnssec-ring",
               "trust-dns-proto/dnssec-ring"]
dnssec = []

# enables experimental the mDNS (multicast) feature
mdns = ["trust-dns/mdns", "trust-dns-proto/mdns", "trust-dns-resolver/mdns"]

# TODO: need to make server support rustls and native-tls
# dns-over-native-tls = ["dns-over-tls",  "trust-dns-resolver/dns-over-native-tls", "trust-dns-server/dns-over-native-tls"]
dns-over-openssl = ["dns-over-tls", "trust-dns-resolver/dns-over-openssl", "trust-dns-server/dns-over-openssl"]
# dns-over-rustls = ["dns-over-tls", "trust-dns-resolver/dns-over-rustls", "trust-dns-server/dns-over-rustls"]
dns-over-tls = []

[dependencies]
chrono = "^0.4"
env_logger = "0.5"
lazy_static = "^1.0"
log = "^0.4.1"
futures = "^0.1.17"
openssl = { version = "^0.10", features = ["v102", "v110"] }
rand = "^0.5"
rusqlite = { version = "^0.13.0", features = ["bundled"] }
rustls = { version = "^0.11.0" }
tokio = "^0.1.6"
tokio-tcp = "^0.1"
tokio-timer = "^0.2"
tokio-udp = "^0.1"
trust-dns = { version = "*", path = "../client" }
trust-dns-openssl = { version = "*", path = "../openssl" }
trust-dns-proto = { version = "*", path = "../proto" }
trust-dns-resolver = { version = "*", path = "../resolver" }
trust-dns-rustls = { version = "*", path = "../rustls" }
trust-dns-server = { version = "*", path = "../server" }

