[package]
name = "trust-dns-proto"
version = "0.3.2"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS library. This is the foundational DNS protocol library for all TRust-DNS projects.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

[features]
dnssec-openssl = ["dnssec", "openssl"]
dnssec-ring = ["dnssec", "ring", "untrusted"]
dnssec = ["data-encoding"]

# enables experimental the mDNS (multicast) feature
mdns = []

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

[lib]
name = "trust_dns_proto"
path = "src/lib.rs"

[dependencies]
byteorder = "^1.2"
data-encoding = { version = "2.1.0", optional = true }
error-chain = "0.1.12"
futures = "^0.1.17"
idna = "^0.1.4"
lazy_static = "^1.0"
log = "^0.4.1"
openssl = { version = "^0.10.6", features = ["v102", "v110"], optional = true }
rand = "^0.4"
ring = { version = "^0.12", optional = true }
smallvec = "^0.6"
socket2 = { version = "^0.3.4", features = ["reuseport"] }
tokio-core = "^0.1"
tokio-io = "^0.1"
untrusted = { version = "^0.5", optional = true }
url = "1.6.0"

[dev-dependencies]
env_logger = "^0.5"
