[package]
name = "trust-dns-resolver"
version = "0.8.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS library. This Resolver library  uses the Client library to perform all DNS queries. The Resolver is intended to be a high-level library for any DNS record resolution see Resolver and ResolverFuture for supported resolution types. The Client can be used for other queries.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-resolver"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

[features]
dnssec-openssl = ["dnssec", "trust-dns-proto/dnssec-openssl"]
dnssec-ring = ["dnssec", "trust-dns-proto/dnssec-ring"]
dnssec = []
mdns = ["trust-dns-proto/mdns"]

[lib]
name = "trust_dns_resolver"
path = "src/lib.rs"

[dependencies]
error-chain = "0.1.12"
futures = "^0.2.0"
lazy_static = "^1.0"
log = "^0.4.1"
lru-cache = "^0.1.1"
resolv-conf = { version = "0.6.0", features = ["system"] } 
tokio-core = "^0.1"
trust-dns-proto = { version = "^0.3", path = "../proto" }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "^0.1.4" }
